# matchbox-desktop

./: ChangeLog  Makefile.am  configure.ac  matchbox-desktop.pc.in
data/: Makefile.am  mb-show-desktop.desktop  mbdesktop_modules.in
modules/: Makefile.am  dotdesktop.c  tasks.c
src/: Makefile.am  item_tasks.c  item_tasks.h  mbdesktop.c  mbdesktop.h  mbdesktop_item.c  mbdesktop_view.c  mbdesktop_win_plugin.c  md5.c  md5.h
